# Explorejungles_Production_Backend

./: .gitignore  ADMIN_COLLECTION_GUIDE.md  ADMIN_FEATURES_OVERVIEW.md  ANALYTICS_FIXES.md  CONFIGURATION_AUDIT_REPORT.md  DATABASE_SETUP.md  DATABASE_SYNC_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  KNOWLEDGE_ENGINE_REWARDS.md  MANUAL_SYNC_GUIDE.md  MIGRATION_AUDIT_RESULTS.md  MIGRATION_FIX_SUMMARY.md  MVF_DAILY_LIMITS_IMPLEMENTATION.md  PASSWORD_RESET_FIX_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PURE_SCORING_SETUP.md  RAILWAY_DATABASE_SETUP.md  RAILWAY_LOGIN_FIX.md  RAILWAY_PRODUCTION_FIXES.md  README.md  SCHEMA_SYNC_README.md  SETTINGS_INTEGRATION_COMPLETE.md  SETUP_GUIDE.md  VERIFICATION_GUIDE.md  add_credits_column.py  add_featured_series_columns  add_missing_mvf_settings.py  add_missing_user_columns.py  add_mvf_daily_limits.py  add_type_column_production.py  add_type_column_to_myths_facts.py  alembic.ini  apply_railway_migrations.py  backup_database.py  check_columns.py  check_community_tables.py  check_database_status.py  check_media.py  check_media_types.py  (+96 more)
alembic/: env.py
alembic/versions/: 001_add_rewards_system.py  001_initial_postgresql_schema.py  002_fix_content_table_schema.py  003_add_category_slug.py  004_add_featured_media_support.py  005_create_enum_types.py  006_fix_media_table_schema.py  007_convert_media_type_to_varchar.py  008_add_performance_indexes.py  009_make_category_slug_required.py  010_add_oauth_fields_to_users.py  010_create_myths_facts_table.py  011_add_podcast_performance_indexes.py  (+32 more)
app/: main.py
config/: podcast-monitoring.yml
(+196 files in other folders)
