[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "junglore-backend"
version = "1.0.0"
description = "FastAPI backend for Junglore wildlife platform with admin panel"
authors = [{name = "Junglore Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart",
    "pydantic>=2.10.0",
    "pydantic-settings",
    "sqlalchemy>=2.0.0",
    "asyncpg",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "itsdangerous",
    "email-validator",
    "aiofiles",
    "python-slugify",
    "Pillow",
    "python-magic",
    "websockets",
    "structlog",
    "greenlet>=3.0.0",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
